Refactoring to main/java + added maven pom + changed scripts